--- a/style.css
+++ b/style.css
@@ -11,28 +11,23 @@ body{
     color: #131313;
 }
 .container{
-    max-width: 450px;
-    height: 700px;
-    padding: 0 10px;
-    margin: 0 auto;
-    background-color: #fff;;
-    background-position: 0 0;
-    background-size: 50vw 100%;
-    background-repeat: no-repeat;
-    border: 1px solid #131313;
     position: relative;
+    width: 450px;
+    height: 700px;
+    left: 305.03px;
+    top: 1751px;
+    background: #F5F5F5;
 }
 .main{
-    max-width: 371px;
-    height: 591px;
-    background-color: #fff;
-    padding: 0 10px;
-    margin: 0 auto;
-    left: 40px;
-    top: 82px;
-    border: 1px solid #131313;
-    border-radius: 8px;
+    box-sizing: border-box;
     position: absolute;
+    width: 371px;
+    height: 591px;
+    margin-left: 40px;
+    margin-top: 82px;
+    background: #FFFFFF;
+    border: 1px solid #DFDFE0;
+    border-radius: 8px;
 }
 
 .top{
@@ -43,43 +38,69 @@ body{
     position: absolute;
     right: 0px;
 }
+.top__inner{
+    position: absolute;
+    width: 61px;
+    height: 59px;
+    margin-left: 195px;
+    margin-top: 13px;
+}
+/* .top__design-left{
+    position: absolute;
+    left: -27.11%;
+    right: 50.42%;
+    top: -9.14%;
+    bottom: 60.64%;
+} */
 .logo__item{
-    margin: 13px;
-    margin-left: 206px;
+    width: 38.57px;
+    height: 25.54px;
+    position: relative;
     justify-content: center;
 }
 .top__heading{
+    font-family: 'Manrope';
+    font-style: normal;
     font-weight: 700;
     font-size: 9.73404px;
     line-height: 10px;
     display: flex;
     align-items: center;
-    text-align: center; 
-    color: #FFFFFF;
-    margin: auto;
-    margin-left: 195px;
+    text-align: center;
+    color: #FFFFFF;  
+    margin: 0; 
 }
 .top__heading-two{
+    font-family: 'Manrope';
+    font-style: normal;
     font-weight: 400;
     font-size: 7.1383px;
     line-height: 14px;
     display: flex;
     align-items: center;
     text-align: center;
-    color: #FFFFFF;
-    margin-left: 204px;
-    margin-top: 5px;
+    color: #FFFFFF;  
+    padding-left: 9px;  
+    margin: 0;
 }
 .block1__heading{
+    position: absolute;
+    width: 176px;
+    height: 18px;
+    font-family: 'Inter';
+    font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 18px;
     letter-spacing: -0.154px;
     color: #354371;
-    margin-left: 97px;
-    margin-top: 20px;
+    margin: 20px 98px 0 97px;
 }
 .block1__par{
+    position: absolute;
+    width: 312px;
+    height: 48px;
+    margin: 45px 30px 10px 29px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -88,14 +109,20 @@ body{
     text-align: center;
     letter-spacing: -0.154px;
     color: rgba(29, 44, 60, 0.52);
-    margin-top: 20px;
-    margin-left: 29px;
 }
 .block1__reg{
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    position: absolute;
+    width: 156px;
+    height: 50px;
+    margin: 93px 108px 19px 107px;
 }
 .block1__email{
+    width: 66px;
+    height: 30px;
+    align-items: center;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
@@ -103,12 +130,13 @@ body{
     line-height: 18px;
     letter-spacing: -0.154px;
     color: #5E6872;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    padding: 6px 12px;
+    background-color: #fff;
+    border: none;
 }
 .block1__phone{
+    width: 66px;
+    height: 30px;
+    align-items: center;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
@@ -116,36 +144,175 @@ body{
     line-height: 18px;
     letter-spacing: -0.154px;
     color: #32404E;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    padding: 6px 12px;
     margin-left: 10px;
 }
-.block1__unput{
+.block1__input{
     display: flex;
-    justify-content: center;
+    justify-content: baseline;
+    position: absolute;
+    width: 310px;
+    height: 45px;
 }
-.block1__unput-code{
+.block1__input-code{
+    display: flex;
+    padding: 13px 20px;
+    width: 78px;
+    height: 45px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
     color: #1D2C3C;
-    flex: none;
-    order: 0;
-    flex-grow: 1;
+    margin-top: 165px;
+    margin-left: 32px;
+    margin-right: 6px;
 }
-.block1__unput-phone{
+.block1__input-phone{
+    display: flex;
+    padding: 13px 20px;
+    width: 226px;
+    height: 45px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
     color: #828282;
-    flex: none;
-    order: 0;
-    flex-grow: 1;
-    margin-left: 26px;
+    margin-top: 165px;
+    margin-right: 29px;
 }
+.cont__button{
+    position: absolute;
+    padding: 9px 10px 9px 10px;
+    background: rgba(72, 156, 255, 0.3);
+    width: 127px;
+    height: 40px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 22px;
+    text-align: center;
+    letter-spacing: -0.408px;
+    color: #FFFFFF;
+    flex: none;
+    border: 0;
+    align-self: stretch;
+    flex-grow: 0;  
+    margin-top: 230px;
+    margin-left: 131px;
+}
+.cont__text{
+    position: absolute;
+    width: 281px;
+    height: 48px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 18px;
+    text-align: center;
+    color: #5E6872;
+    margin-top: 271px;
+    margin-left: 42px;
+    padding-top: 10px;
+    }
+.cont__text-line{
+    position: absolute;
+    width: 318px;
+    border: 1px solid #DFDFE0;
+    margin-top: 339px;
+    margin-left: 26px;
+    }
+.block2__heading{
+    position: absolute;
+    width: 218px;
+    height: 18px;
+    margin-left: 76px;
+    margin-top: 357px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 18px;
+    text-align: center;
+    letter-spacing: -0.154px;
+    color: #354371;
+    }
+.block2__par{
+    position: absolute;
+    width: 312px;
+    height: 24px;
+    margin-left: 26px;
+    margin-top: 383px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: -0.154px;
+    color: rgba(29, 44, 60, 0.52);
+    }
+.block2__accountid{
+    position: absolute;
+    width: 311px;
+    height: 16px;
+    margin-left: 32px;
+    margin-top: 418px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #B6BABD;
+    
+    }
+.block2__input1{
+    position: absolute;
+    display: flex;
+    padding: 13px 20px;
+    width: 241px;
+    height: 45px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #1D2C3C;
+    margin-top: 444px;
+    margin-left: 32px;
+    }
+.block2__input2{
+    position: absolute;
+    width: 50px;
+    height: 45px;
+    margin-top: 444px;
+    margin-left: 273px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 16px;
+    line-height: 19px;
+    color: #000000;
+    flex: none;
+    }
+.sign__button{
+    padding: 9px 10px 9px 10px;
+    position: absolute;
+    margin-top: 522px;
+    margin-left: 134px;
+    background: rgba(72, 156, 255, 0.3);
+    width: 127px;
+    height: 40px;
+    font-family: 'Inter';
+    border: none;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 22px;
+    text-align: center;
+    letter-spacing: -0.408px;
+    color: #FFFFFF;
+    }
