--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    color: #131313;
+    /* color: #131313; */
 }
 .container{
     position: relative;
